--- a/style.css
+++ b/style.css
@@ -24,6 +24,13 @@ body {
   justify-content: center;
   align-items: center;
 }
+.container h1 {
+  font-size: 50px;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+.container h1 span {
+  color: darkgoldenrod;
+}
 
 #timer {
   margin: 0px 0px 15px;
