--- a/style.scss
+++ b/style.scss
@@ -23,6 +23,15 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    h1{
+        font-size: 50px;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
+        span{
+            color: darkgoldenrod
+        }
+    }
 }
 
     #timer{
